# CSE488-Project-Cell-Tracking

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: index.md
notebooks/: 00_reference_colab.ipynb
scripts/: eval_seg.py  setup_data.py  train_svm.py
src/cell_tracking/: __init__.py  cli.py  config.py  data.py  evaluation.py  features.py
src/cell_tracking/models/: svm.py
tests/: test_features.py
