[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cse488-cell-tracking"
version = "0.1.0"
description = "Starter toolkit for the CSE488 cell segmentation & tracking project"
authors = [{name = "Femian John Charles", email = ""}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.2",
  "scikit-image>=0.24",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "requests>=2.32",
  "typer>=0.12",
  "imagecodecs",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=24.4",
  "ruff>=0.5",
]

[project.scripts]
cell-tracking = "cell_tracking.cli:app"
